# klblog

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  TODO.KL.md  TODO.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt
src/ff/: CMakeLists.txt  codescanner.cpp  codescanner.hpp  markwrite.cpp  markwrite.hpp  mwblocks.hpp  poorconfig.cpp  poorconfig.hpp  textscanner.cpp  textscanner.hpp
src/kl/: CMakeLists.txt  kl.hpp  klaction.hpp  klargparser.cpp  klargparser.hpp  klds.hpp  klexcept.cpp  klexcept.hpp  klfs.cpp  klfs.hpp  klio.cpp  klio.hpp  klnet.cpp  klnet.hpp  klprocess.cpp  klprocess.hpp  kltext.cpp  kltext.hpp  kltime.cpp  kltime.hpp  kltimecounter.cpp  kltimecounter.hpp  klvalue.cpp  klvalue.hpp  textscanner.cpp  textscanner.hpp
src/klblog/: CMakeLists.txt  blog.cpp  blog.hpp  blogsettings.cpp  blogsettings.hpp  klblog.cpp  systemsettings.cpp  systemsettings.hpp
test/: CMakeLists.txt
test/kl/: CMakeLists.txt  kldate-tests.cpp  klfs-tests.cpp  kltext-tests.cpp  kltextchain-tests.cpp  kltextview-tests.cpp  klvalue-tests.cpp
tools/: build.sh  run-checker.sh  run-coverage.sh  run-tidy.sh  setup.sh  test.sh
